--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "edifica-api-water-measurement",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Lincoln Modesto",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -25,9 +25,13 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.9.5",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
